objects/dc-database-clean.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
  labels:
    app: database
  name: database
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: database
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
      labels:
        deploymentconfig: database
    spec:
      containers:
      - env:
        - name: MYSQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: PASSWORD
              name: database-db-auth
        - name: MYSQL_USER
          valueFrom:
            secretKeyRef:
              key: USER
              name: database-db-auth
        - name: MYSQL_DATABASE
          valueFrom:
            secretKeyRef:
              key: DATABASE
              name: database-db-auth
        imagePullPolicy: Always
        name: database
        ports:
        - containerPort: 3306
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - database
      from:
        kind: ImageStreamTag
        name: database:latest
    type: ImageChange
