objects/svc-database-clean.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: database
  name: database
spec:
  ports:
  - name: 3306-tcp
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    deploymentconfig: database
  sessionAffinity: None
  type: ClusterIP
